--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 							<li><p class="small">Channels & Movies</p></li>
 							<li><p class="small">All devices supported</p></li>
 						</ul>
-						<a href="https://openai.com/index/chatgpt/" class="btn outline">Select plan</a>
+						<a href="" class="btn outline">Select plan</a>
 					</div>
 
 					<div class="pack best_pack_container">
